force-app/main/default/objects/Case/fields/Account_Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Account_Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please Select Channel Partner Account</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Channel Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>