force-app/main/default/objects/Case/fields/Ageing__c.field-meta.xml
<CustomField>
    <fullName>Ageing__c</fullName>
    <formula>IF(AgeingOfComplaints__c  &lt;= 7 , &apos;Up to 7 days&apos;,
If(AND(AgeingOfComplaints__c &gt;7 , AgeingOfComplaints__c &lt;= 15),&apos;Up to 15 days&apos;,
If(AND(AgeingOfComplaints__c &gt;15, AgeingOfComplaints__c &lt;= 30),&apos;Up to 30 days&apos;, &apos;Over 30 days&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ageing</label>
    <type>Text</type>
</CustomField>