force-app/main/default/objects/Case/fields/AgeingOfComplaints__c.field-meta.xml
<CustomField>
    <fullName>AgeingOfComplaints__c</fullName>
    <formula>IF(AND(ISBLANK(ClosedDate),NOT(ISBLANK(RW_Case_Reopened_Date__c))),TODAY()-DATEVALUE(RW_Case_Reopened_Date__c ), 
 IF(AND(ISBLANK(ClosedDate), ISBLANK(RW_Case_Reopened_Date__c)), TODAY()-DATEVALUE(CreatedDate), 
 IF(AND(NOT(ISBLANK(ClosedDate)), NOT(ISBLANK(RW_Case_Reopened_Date__c))), DATEVALUE(ClosedDate) - DATEVALUE(RW_Case_Reopened_Date__c),  DATEVALUE(ClosedDate)- DATEVALUE(CreatedDate))
 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AgeingOfComplaints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>