force-app/main/default/objects/Case/fields/call_url__c.field-meta.xml
<CustomField>
    <fullName>call_url__c</fullName>
    <label>call url</label>
    <type>Url</type>
</CustomField>