force-app/main/default/objects/Case/fields/Case_Ageing_From_Parent__c.field-meta.xml
<CustomField>
    <fullName>Case_Ageing_From_Parent__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Parent_Case__c)),
    TODAY() - DATEVALUE(Parent_Case__r.CreatedDate),
    TODAY() - DATEVALUE(CreatedDate)
)</formula>
    <label>Case Ageing (In Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>