force-app/main/default/objects/Case/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Profile Update</fullName>
            </value>
            <value>
                <fullName>Invoice Related</fullName>
            </value>
            <value>
                <fullName>Payment Related</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>