force-app/main/default/objects/Case/fields/Case_Escalation_TAT__c.field-meta.xml
<CustomField>
    <fullName>Case_Escalation_TAT__c</fullName>
    <label>Case Escalation TAT Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>