force-app/main/default/objects/Case/fields/Case_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Category__c</fullName>
    <label>Case Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vendor Code</fullName>
            </value>
            <value>
                <fullName>Account Related</fullName>
            </value>
            <value>
                <fullName>Document Related</fullName>
            </value>
            <value>
                <fullName>Email Change</fullName>
            </value>
            <value>
                <fullName>Mobile Change</fullName>
            </value>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>RERA Related</fullName>
            </value>
            <value>
                <fullName>GST Related</fullName>
            </value>
            <value>
                <fullName>BANK Ac. Related</fullName>
            </value>
            <value>
                <fullName>Invoice Preview Query</fullName>
            </value>
            <value>
                <fullName>Amount Discrepancy</fullName>
            </value>
            <value>
                <fullName>Invoice Date Mismatch</fullName>
            </value>
            <value>
                <fullName>Booking Date Mismatch</fullName>
            </value>
            <value>
                <fullName>Base Brokerage Query</fullName>
            </value>
            <value>
                <fullName>Ladder Brokerage Query</fullName>
            </value>
            <value>
                <fullName>Kicker Incentive Query</fullName>
            </value>
            <value>
                <fullName>Partial Payment</fullName>
            </value>
            <value>
                <fullName>Payment Advice</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>