force-app/main/default/objects/Case/fields/CSAT_Feedback_Rating__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Feedback_Rating__c</fullName>
    <label>CSAT Feedback Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Happy</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Unhappy</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>