force-app/main/default/objects/Case/fields/CSAT_Feedback_Remark__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Feedback_Remark__c</fullName>
    <label>CSAT Feedback Remark</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>