force-app/main/default/objects/Case/fields/CSAT_Feedback_Status__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Feedback_Status__c</fullName>
    <label>CSAT Feedback Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent To Customer</fullName>
            </value>
            <value>
                <fullName>Feedback Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>