force-app/main/default/objects/Case/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <label>Escalation Current Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CP-L1</fullName>
                <default>true</default>
                <label>CP-L1</label>
            </value>
            <value>
                <fullName>CP-L2</fullName>
            </value>
            <value>
                <fullName>CP-L3</fullName>
            </value>
            <value>
                <fullName>CP-L4</fullName>
            </value>
            <value>
                <fullName>CP-L5</fullName>
            </value>
            <value>
                <fullName>CP-L6</fullName>
            </value>
            <value>
                <fullName>CP-L7</fullName>
            </value>
            <value>
                <fullName>CP-L8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>