force-app/main/default/objects/Case/fields/Customer_Lifecycle_Touchpoint__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lifecycle_Touchpoint__c</fullName>
    <label>Customer Lifecycle Touchpoint</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RW_Case_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation Related</fullName>
            </value>
            <value>
                <fullName>Home Loan Related</fullName>
            </value>
            <value>
                <fullName>Payment Related</fullName>
            </value>
            <value>
                <fullName>Post-Possession</fullName>
            </value>
            <value>
                <fullName>Pre-Booking Experience</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Routine Operations</fullName>
            </value>
            <value>
                <fullName>Self-Service Options</fullName>
            </value>
            <value>
                <fullName>Welcome Call</fullName>
            </value>
            <value>
                <fullName>Possession</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>