force-app/main/default/objects/Case/fields/Escalation_Case_Resolved_Status__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Case_Resolved_Status__c</fullName>
    <label>Escalation Case Resolved Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>