force-app/main/default/objects/Case/fields/Escalation_Level__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Level__c</fullName>
    <label>Escalation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>