force-app/main/default/objects/Case/fields/FM_Team_Assigned__c.field-meta.xml
<CustomField>
    <fullName>FM_Team_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FM Team Assigned</label>
    <type>Checkbox</type>
</CustomField>