force-app/main/default/objects/Case/fields/Full_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Full ID</label>
    <type>Text</type>
</CustomField>