force-app/main/default/objects/Case/fields/Last_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Closed_Date__c</fullName>
    <label>Last Closed Date</label>
    <type>DateTime</type>
</CustomField>