force-app/main/default/objects/Case/fields/locobuzz__BrandGuid__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__BrandGuid__c</fullName>
    <description>This field is used to store BrandGuid</description>
    <label>BrandGuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>