force-app/main/default/objects/Case/fields/locobuzz__Case_Categorization__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Case_Categorization__c</fullName>
    <label>Case Categorization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>