force-app/main/default/objects/Case/fields/locobuzz__CaseContactName__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__CaseContactName__c</fullName>
    <formula>IF( ContactId &lt;&gt; null,  Account.FirstName+&apos; &apos;+Account.LastName,  SuppliedName  )</formula>
    <label>CaseContactName</label>
    <type>Text</type>
</CustomField>