force-app/main/default/objects/Case/fields/locobuzz__Closed_By_Locobuzz__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Closed_By_Locobuzz__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This fields is used when the Case is mark as Close by Locobuzz</description>
    <label>Closed By Locobuzz ?</label>
    <type>Checkbox</type>
</CustomField>