force-app/main/default/objects/Case/fields/locobuzz__Latest_TagID__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Latest_TagID__c</fullName>
    <label>Latest TagID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>