force-app/main/default/objects/Case/fields/locobuzz__Message_Type__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Message_Type__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>locobuzz__Message_Type_Picklist_Values</valueSetName>
    </valueSet>
</CustomField>