force-app/main/default/objects/Case/fields/locobuzz__Name__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Name__c</fullName>
    <formula>locobuzz__Social_Persona__r.locobuzz__Real_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>