force-app/main/default/objects/Case/fields/locobuzz__No_of_Mentions__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__No_of_Mentions__c</fullName>
    <label>No of Mentions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>