force-app/main/default/objects/Case/fields/locobuzz__Post_Identifier__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Post_Identifier__c</fullName>
    <label>Post Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keyword</fullName>
            </value>
            <value>
                <fullName>Tag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>