force-app/main/default/objects/Case/fields/locobuzz__Social_Persona__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Social_Persona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Social Persona</label>
    <referenceTo>locobuzz__Social_Persona__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>