force-app/main/default/objects/Case/fields/locobuzz__Source__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>locobuzz__Social_Network_List</valueSetName>
    </valueSet>
</CustomField>