force-app/main/default/objects/Case/fields/locobuzz__Ticket_View_Link__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Ticket_View_Link__c</fullName>
    <description>This field is used to store Ticket View Link</description>
    <label>Ticket View Link</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>