force-app/main/default/objects/Case/fields/Locobuzz_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Locobuzz_Agent_Name__c</fullName>
    <label>Locobuzz Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>