force-app/main/default/objects/Case/fields/Locobuzz_Notes__c.field-meta.xml
<CustomField>
    <fullName>Locobuzz_Notes__c</fullName>
    <label>Locobuzz Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>