force-app/main/default/objects/Case/fields/Post_Possession_Customer__c.field-meta.xml
<CustomField>
    <fullName>Post_Possession_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Possession Customer</label>
    <type>Checkbox</type>
</CustomField>