force-app/main/default/objects/Case/fields/Remarks_by_RM__c.field-meta.xml
<CustomField>
    <fullName>Remarks_by_RM__c</fullName>
    <label>Remarks by RM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed Satisfactory</fullName>
            </value>
            <value>
                <fullName>Closed Un-satisfactory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>