force-app/main/default/objects/Case/fields/RW_Case_Comming_From_Portal__c.field-meta.xml
<CustomField>
    <fullName>RW_Case_Comming_From_Portal__c</fullName>
    <label>Case Comming From Portal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>