force-app/main/default/objects/Case/fields/RW_Case_Escalation__c.field-meta.xml
<CustomField>
    <fullName>RW_Case_Escalation__c</fullName>
    <label>Case Escalation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Escalation</fullName>
            </value>
            <value>
                <fullName>Second Escalation - 1</fullName>
            </value>
            <value>
                <fullName>Third Escalation - 1</fullName>
            </value>
            <value>
                <fullName>Third Escalation - 2</fullName>
            </value>
            <value>
                <fullName>Fourth Escalation</fullName>
            </value>
            <value>
                <fullName>Reopen Escalation</fullName>
            </value>
            <value>
                <fullName>Second Escalation - 2</fullName>
            </value>
            <value>
                <fullName>Third Escalation 2</fullName>
            </value>
            <value>
                <fullName>Third Escalation</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Fourth Escalation - 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>