force-app/main/default/objects/Case/fields/RW_Case_Reopened_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Case_Reopened_Date__c</fullName>
    <label>Case Reopened Date</label>
    <type>DateTime</type>
</CustomField>