force-app/main/default/objects/Case/fields/RW_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>RW_Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>Appreciation</fullName>
                <isActive>false</isActive>
                <label>Appreciation</label>
            </value>
            <value>
                <fullName>General Feedback</fullName>
                <isActive>false</isActive>
                <label>General Feedback</label>
            </value>
            <value>
                <fullName>Query</fullName>
                <isActive>false</isActive>
                <label>Query</label>
            </value>
            <value>
                <fullName>Request</fullName>
                <isActive>false</isActive>
                <label>Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>