force-app/main/default/objects/Case/fields/RW_Communication_Type__c.field-meta.xml
<CustomField>
    <fullName>RW_Communication_Type__c</fullName>
    <label>Communication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Outbound Call</fullName>
            </value>
            <value>
                <fullName>In person meeting with CRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>