force-app/main/default/objects/Case/fields/RW_Complaint_Sub_Subtype__c.field-meta.xml
<CustomField>
    <fullName>RW_Complaint_Sub_Subtype__c</fullName>
    <label>Complaint Sub - Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Possession not received on Time</fullName>
            </value>
            <value>
                <fullName>Want compensation/interest for delayed possession</fullName>
            </value>
            <value>
                <fullName>Poor Construction Quality</fullName>
            </value>
            <value>
                <fullName>Too many Snags in New Apartment</fullName>
            </value>
            <value>
                <fullName>Variation in Tiles/Paint/Want Replacement</fullName>
            </value>
            <value>
                <fullName>Remove Clause</fullName>
            </value>
            <value>
                <fullName>Wont Sign Affidavit</fullName>
            </value>
            <value>
                <fullName>Paid but still charged for Interest</fullName>
            </value>
            <value>
                <fullName>Want waiver</fullName>
            </value>
            <value>
                <fullName>Incorrect Interest Charged</fullName>
            </value>
            <value>
                <fullName>No Communication for Area Change</fullName>
            </value>
            <value>
                <fullName>Wont&apos;Pay for Additional Area</fullName>
            </value>
            <value>
                <fullName>Plan changed without taking any Approval</fullName>
            </value>
            <value>
                <fullName>Construction Update Not Received</fullName>
            </value>
            <value>
                <fullName>Demand related Communication Not received</fullName>
            </value>
            <value>
                <fullName>Not Sent</fullName>
            </value>
            <value>
                <fullName>Remove Certain Clause</fullName>
            </value>
            <value>
                <fullName>Receipts/Allotment Letter/NOC/ROC/Demand/Agreement</fullName>
            </value>
            <value>
                <fullName>Seepage/Leakage</fullName>
            </value>
            <value>
                <fullName>Parking Space inadequate/Damaged/No Parking</fullName>
            </value>
            <value>
                <fullName>Snags not worked properly/Snags reoccured.</fullName>
            </value>
            <value>
                <fullName>FM Not Helpful/Not Available/ Not Co-Operative.</fullName>
            </value>
            <value>
                <fullName>Process Complicated/Doesn’t have Client to sell/ Cant Pay wants to Resell</fullName>
            </value>
            <value>
                <fullName>Wont Pay Demurrage</fullName>
            </value>
            <value>
                <fullName>Unable to reach/Whom to contact</fullName>
            </value>
            <value>
                <fullName>Not responding to emails/calls</fullName>
            </value>
            <value>
                <fullName>RM was rude/Not Helpful</fullName>
            </value>
            <value>
                <fullName>Misinformed about rate/payment plan</fullName>
            </value>
            <value>
                <fullName>False promise about Scheme/Offer</fullName>
            </value>
            <value>
                <fullName>Discount/Voucher Not Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>