force-app/main/default/objects/Case/fields/RW_Complaint_SubType__c.field-meta.xml
<CustomField>
    <fullName>RW_Complaint_SubType__c</fullName>
    <label>Complaint SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RW_Complaint_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADF Related</fullName>
            </value>
            <value>
                <fullName>Agreement Clause dispute</fullName>
            </value>
            <value>
                <fullName>Agreement Related</fullName>
                <label>Agreement related</label>
            </value>
            <value>
                <fullName>agreement Related dispute</fullName>
            </value>
            <value>
                <fullName>Appreciation for other Depts</fullName>
            </value>
            <value>
                <fullName>Appreciation for Runwal</fullName>
            </value>
            <value>
                <fullName>Appreciation Mail for CRM</fullName>
            </value>
            <value>
                <fullName>Appreciation Mail for Sales</fullName>
            </value>
            <value>
                <fullName>approvals related</fullName>
            </value>
            <value>
                <fullName>Balance Transfer Related</fullName>
            </value>
            <value>
                <fullName>Bank / Banker Related</fullName>
            </value>
            <value>
                <fullName>BCAM / FCAM / society charges</fullName>
            </value>
            <value>
                <fullName>Booking Details Related</fullName>
            </value>
            <value>
                <fullName>Cancellation at Welcome Call</fullName>
            </value>
            <value>
                <fullName>cancellation date related</fullName>
            </value>
            <value>
                <fullName>Cancellation due to death</fullName>
            </value>
            <value>
                <fullName>cancellation due to incorrect information at Sales</fullName>
            </value>
            <value>
                <fullName>cancellation medical / financial</fullName>
            </value>
            <value>
                <fullName>Cancellation process related</fullName>
                <label>Cancellation Process Related</label>
            </value>
            <value>
                <fullName>Cancellation - Reason not Informed</fullName>
            </value>
            <value>
                <fullName>Cancellation related</fullName>
            </value>
            <value>
                <fullName>Cancel the Booking - Financial Constraints</fullName>
            </value>
            <value>
                <fullName>Cancel the Booking - Home loan sanction related</fullName>
            </value>
            <value>
                <fullName>Carpentry issues Related</fullName>
            </value>
            <value>
                <fullName>change in Registered e-Mail ID</fullName>
            </value>
            <value>
                <fullName>Change in Registered Mailing Address</fullName>
            </value>
            <value>
                <fullName>change in Registered Mobile Number</fullName>
            </value>
            <value>
                <fullName>change of phone number</fullName>
            </value>
            <value>
                <fullName>change of Primary / secondary owner</fullName>
            </value>
            <value>
                <fullName>Civil Related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>