force-app/main/default/objects/Case/fields/RW_Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>RW_Complaint_Type__c</fullName>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Lifecycle_Touchpoint__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant Details</fullName>
            </value>
            <value>
                <fullName>Appreciation from Customer</fullName>
            </value>
            <value>
                <fullName>Booking, pricing &amp; payment schedule</fullName>
            </value>
            <value>
                <fullName>Booking, pricing &amp; payment schedule(Enquiry)</fullName>
            </value>
            <value>
                <fullName>Booking Experience</fullName>
            </value>
            <value>
                <fullName>Call status</fullName>
            </value>
            <value>
                <fullName>Cancellation &amp; Refund Related</fullName>
            </value>
            <value>
                <fullName>Cancellation Related</fullName>
            </value>
            <value>
                <fullName>Change in Applicant Details</fullName>
            </value>
            <value>
                <fullName>Change of Contact Details</fullName>
            </value>
            <value>
                <fullName>Change or update demographics</fullName>
            </value>
            <value>
                <fullName>Collections / Outbound Call</fullName>
            </value>
            <value>
                <fullName>Complaints</fullName>
            </value>
            <value>
                <fullName>Construction Update</fullName>
            </value>
            <value>
                <fullName>Customer Service Related</fullName>
            </value>
            <value>
                <fullName>Demand</fullName>
            </value>
            <value>
                <fullName>Demand letter Related</fullName>
            </value>
            <value>
                <fullName>Demand letter Related(Enquiry)</fullName>
            </value>
            <value>
                <fullName>DND</fullName>
            </value>
            <value>
                <fullName>Documentation Enquiry</fullName>
            </value>
            <value>
                <fullName>Documentation Related</fullName>
            </value>
            <value>
                <fullName>Documents</fullName>
            </value>
            <value>
                <fullName>Gifts / Voucher Related</fullName>
            </value>
            <value>
                <fullName>Home Loan Related</fullName>
            </value>
            <value>
                <fullName>Home Loan Related(Enquiry)</fullName>
            </value>
            <value>
                <fullName>Interaction Feedback</fullName>
            </value>
            <value>
                <fullName>Interest Dispute</fullName>
            </value>
            <value>
                <fullName>Interest Related</fullName>
            </value>
            <value>
                <fullName>Interest Waiver</fullName>
            </value>
            <value>
                <fullName>Interest Waiver Enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>