force-app/main/default/objects/Case/fields/RW_Employee__c.field-meta.xml
<CustomField>
    <fullName>RW_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>RW_Employee__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>