force-app/main/default/objects/Case/fields/RW_Entitlement_Added__c.field-meta.xml
<CustomField>
    <fullName>RW_Entitlement_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entitlement Added</label>
    <type>Checkbox</type>
</CustomField>