force-app/main/default/objects/Case/fields/RW_Escalated_Time__c.field-meta.xml
<CustomField>
    <fullName>RW_Escalated_Time__c</fullName>
    <label>Escalated Time</label>
    <type>DateTime</type>
</CustomField>